<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello World</string>
    <string name="logo">Solar You</string>
    <string name="action_settings">Settings</string>
    <string name="whereFrom">Where are you from?</string>
    <string name="whatAge">How old are you?</string>
    <string name="age">years</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="saturn">Saturn</string>
    <string name="uranus">Uranus</string>
    <string name="neptune">Neptune</string>
    <string name="button">Convert</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <color name="white">#fffdfbff</color>


</resources>
